--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-devicons": "^2.14.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.20.1",
     "react-slick": "^0.29.0",
