--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@heroicons/react": "^2.1.1",
     "@types/react-slick": "^0.23.13",
+    "axios": "^1.6.2",
+    "dotenv": "^16.3.1",
     "gsap": "^3.12.3",
     "i18next": "^23.7.9",
     "i18next-browser-languagedetector": "^7.2.0",
